--- a/fr/apprendre-anglais-efficacement.html
+++ b/fr/apprendre-anglais-efficacement.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">Comment apprendre l'anglais efficacement :<br>Mon parcours et mes conseils</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. Constance et persévérance : Le jeu à long terme est le seul jeu</h3>
-            <p>Enfin, et c'est peut-être la chose la plus importante que j'ai apprise dans mon parcours : la <strong>constance et la persévérance</strong> sont tout. L'acquisition d'une langue n'est pas un sprint ; c'est un marathon. Il y aura des hauts et des bas, des moments de frustration, et des périodes où vous aurez l'impression de ne pas progresser. Mais vous devez continuer ! <strong>Établissez un programme d'étude régulier</strong> et tenez-vous-y autant que possible, même si ce n'est que pour 30 minutes par jour. La <strong>motivation fluctuera</strong>, donc vous avez besoin de discipline. Célébrez vos petites victoires, fixez-vous des attentes réalistes et essayez de trouver de la joie dans le processus lui-même. N'oubliez pas de <strong>suivre vos progrès</strong> (comme je l'ai fait avec mes tableurs !) et vérifiez périodiquement vos objectifs et méthodes d'apprentissage pour vous assurer qu'ils fonctionnent toujours pour vous. Embrassez les défis, apprenez de vos erreurs et surtout, <strong>n'abandonnez pas !</strong> La fluidité est absolument réalisable avec un effort constant, les bonnes ressources et une attitude positive. Et au fur et à mesure de votre progression, n'oubliez pas de vérifier votre niveau et de pratiquer ce que vous avez appris. Pour une évaluation fiable et une pratique en grammaire, en utilisation de l'anglais, en vocabulaire et en lecture, je recommande personnellement <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>. C'est une excellente ressource de tests d'anglais gratuits pour évaluer vos progrès et maintenir vos compétences.</p>
+            <p>Enfin, et c'est peut-être la chose la plus importante que j'ai apprise dans mon parcours : la <strong>constance et la persévérance</strong> sont tout. L'acquisition d'une langue n'est pas un sprint ; c'est un marathon. Il y aura des hauts et des bas, des moments de frustration, et des périodes où vous aurez l'impression de ne pas progresser. Mais vous devez continuer ! <strong>Établissez un programme d'étude régulier</strong> et tenez-vous-y autant que possible, même si ce n'est que pour 30 minutes par jour. La <strong>motivation fluctuera</strong>, donc vous avez besoin de discipline. Célébrez vos petites victoires, fixez-vous des attentes réalistes et essayez de trouver de la joie dans le processus lui-même. N'oubliez pas de <strong>suivre vos progrès</strong> (comme je l'ai fait avec mes tableurs !) et vérifiez périodiquement vos objectifs et méthodes d'apprentissage pour vous assurer qu'ils fonctionnent toujours pour vous. Embrassez les défis, apprenez de vos erreurs et surtout, <strong>n'abandonnez pas !</strong> La fluidité est absolument réalisable avec un effort constant, les bonnes ressources et une attitude positive. Et au fur et à mesure de votre progression, n'oubliez pas de vérifier votre niveau et de pratiquer ce que vous avez appris. Pour une évaluation fiable et une pratique en grammaire, en utilisation de l'anglais, en vocabulaire et en lecture, je recommande personnellement <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>. C'est une excellente ressource de tests d'anglais gratuits pour évaluer vos progrès et maintenir vos compétences.</p>
             <div class="tip-box">
                 <div class="tip-title">Conseil :</div>
                 <p><strong>Faites de l'apprentissage de l'anglais une <em>habitude</em>, pas juste un passe-temps. Créez un programme d'étude réaliste et tenez-vous-y, même quand la motivation baisse. Célébrez les petites victoires et rappelez-vous – la persévérance est la clé ultime ! Et n'oubliez pas d'évaluer régulièrement vos compétences en utilisant des ressources comme englishtests.online pour suivre votre progression.</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/fr/apprendre-anglais-efficacement",
         "mainEntityOfPage": {
