--- a/hi/angreji-sikhne-ke-saral-tarike.html
+++ b/hi/angreji-sikhne-ke-saral-tarike.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">अंग्रेज़ी प्रभावी ढंग से कैसे सीखें:<br>मेरी यात्रा और सलाह</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. स्थिरता और दृढ़ता: लंबा खेल ही एकमात्र खेल है</h3>
-            <p>अंत में, और यह शायद सबसे महत्वपूर्ण बात है जो मैंने अपनी यात्रा पर सीखी: <strong>स्थिरता और दृढ़ता</strong> सब कुछ है। भाषा अधिग्रहण एक स्प्रिंट नहीं है; यह एक मैराथन है। उतार-चढ़ाव होंगे, निराशा के क्षण, और ऐसे समय जब आपको लगेगा कि आप प्रगति नहीं कर रहे हैं। लेकिन आपको आगे बढ़ते रहना होगा! <strong>एक नियमित अध्ययन कार्यक्रम स्थापित करें</strong> और जितना संभव हो उसका पालन करें, भले ही यह दिन में सिर्फ 30 मिनट के लिए ही हो। <strong>प्रेरणा में उतार-चढ़ाव होगा</strong>, इसलिए आपको अनुशासन की आवश्यकता है। अपनी छोटी जीतों का जश्न मनाएं, यथार्थवादी अपेक्षाएं रखें, और प्रक्रिया में ही आनंद पाने की कोशिश करें। <strong>अपनी प्रगति को ट्रैक</strong> करना याद रखें (जैसे मैंने अपने स्प्रेडशीट के साथ किया!) और समय-समय पर अपने लक्ष्यों और सीखने की विधियों के साथ जांच करें ताकि सुनिश्चित हो सके कि वे अभी भी काम कर रहे हैं। चुनौतियों को अपनाएं, अपनी गलतियों से सीखें, और सबसे महत्वपूर्ण, <strong>हार न मानें!</strong> धाराप्रवाहता निश्चित रूप से लगातार प्रयास, सही संसाधनों और सकारात्मक दृष्टिकोण के साथ प्राप्त करने योग्य है। और जैसे-जैसे आप प्रगति करते हैं, अपने स्तर की जांच करना और आपने जो सीखा है उसका अभ्यास करना याद रखें। व्याकरण, अंग्रेजी के उपयोग, शब्दावली और पढ़ने में विश्वसनीय मूल्यांकन और अभ्यास के लिए, मैं व्यक्तिगत रूप से <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a> की सिफारिश करता हूं। यह अपनी प्रगति का अनुमान लगाने और अपने कौशल को तेज रखने के लिए मुफ्त अंग्रेजी परीक्षणों का एक बढ़िया संसाधन है।</p>
+            <p>अंत में, और यह शायद सबसे महत्वपूर्ण बात है जो मैंने अपनी यात्रा पर सीखी: <strong>स्थिरता और दृढ़ता</strong> सब कुछ है। भाषा अधिग्रहण एक स्प्रिंट नहीं है; यह एक मैराथन है। उतार-चढ़ाव होंगे, निराशा के क्षण, और ऐसे समय जब आपको लगेगा कि आप प्रगति नहीं कर रहे हैं। लेकिन आपको आगे बढ़ते रहना होगा! <strong>एक नियमित अध्ययन कार्यक्रम स्थापित करें</strong> और जितना संभव हो उसका पालन करें, भले ही यह दिन में सिर्फ 30 मिनट के लिए ही हो। <strong>प्रेरणा में उतार-चढ़ाव होगा</strong>, इसलिए आपको अनुशासन की आवश्यकता है। अपनी छोटी जीतों का जश्न मनाएं, यथार्थवादी अपेक्षाएं रखें, और प्रक्रिया में ही आनंद पाने की कोशिश करें। <strong>अपनी प्रगति को ट्रैक</strong> करना याद रखें (जैसे मैंने अपने स्प्रेडशीट के साथ किया!) और समय-समय पर अपने लक्ष्यों और सीखने की विधियों के साथ जांच करें ताकि सुनिश्चित हो सके कि वे अभी भी काम कर रहे हैं। चुनौतियों को अपनाएं, अपनी गलतियों से सीखें, और सबसे महत्वपूर्ण, <strong>हार न मानें!</strong> धाराप्रवाहता निश्चित रूप से लगातार प्रयास, सही संसाधनों और सकारात्मक दृष्टिकोण के साथ प्राप्त करने योग्य है। और जैसे-जैसे आप प्रगति करते हैं, अपने स्तर की जांच करना और आपने जो सीखा है उसका अभ्यास करना याद रखें। व्याकरण, अंग्रेजी के उपयोग, शब्दावली और पढ़ने में विश्वसनीय मूल्यांकन और अभ्यास के लिए, मैं व्यक्तिगत रूप से <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a> की सिफारिश करता हूं। यह अपनी प्रगति का अनुमान लगाने और अपने कौशल को तेज रखने के लिए मुफ्त अंग्रेजी परीक्षणों का एक बढ़िया संसाधन है।</p>
             <div class="tip-box">
                 <div class="tip-title">सुझाव:</div>
                 <p><strong>अंग्रेजी सीखने को केवल एक शौक नहीं, बल्कि एक <em>आदत</em> बनाएं। एक यथार्थवादी अध्ययन कार्यक्रम बनाएं और उसका पालन करें, यहां तक कि जब प्रेरणा कम हो। छोटी जीतों का जश्न मनाएं और याद रखें - दृढ़ता ही अंतिम कुंजी है! और englishtests.online जैसे संसाधनों का उपयोग करके नियमित रूप से अपने कौशल का आकलन करना न भूलें ताकि अपने सुधार को ट्रैक कर सकें।</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike",
         "mainEntityOfPage": {
