--- a/id/belajar-bahasa-inggris-efektif.html
+++ b/id/belajar-bahasa-inggris-efektif.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">Cara Belajar Bahasa Inggris dengan Efektif:<br>Perjalanan dan Saran Saya</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. Konsistensi dan Ketekunan: Permainan Jangka Panjang adalah Satu-satunya Permainan</h3>
-            <p>Akhirnya, dan ini mungkin hal terpenting yang saya pelajari dalam perjalanan saya: <strong>konsistensi dan ketekunan</strong> adalah segalanya. Penguasaan bahasa bukanlah sprint; ini adalah maraton. Akan ada pasang surut, saat-saat frustasi, dan waktu ketika Anda merasa tidak membuat kemajuan. Tapi Anda harus terus maju! <strong>Tetapkan jadwal belajar rutin</strong> dan patuhi sebisa mungkin, bahkan jika hanya 30 menit sehari. <strong>Motivasi akan berfluktuasi</strong>, jadi Anda membutuhkan disiplin. Rayakan kemenangan kecil Anda, tetapkan harapan realistis, dan cobalah untuk menemukan kegembiraan dalam prosesnya sendiri. Ingatlah untuk <strong>melacak kemajuan Anda</strong> (seperti yang saya lakukan dengan spreadsheet saya!) dan secara berkala periksa tujuan dan metode pembelajaran Anda untuk memastikan mereka masih bekerja untuk Anda. Rangkullah tantangan, belajar dari kesalahan Anda, dan yang terpenting, <strong>jangan menyerah!</strong> Kelancaran benar-benar dapat dicapai dengan usaha konsisten, sumber daya yang tepat, dan sikap positif. Dan saat Anda berkembang, ingatlah untuk memeriksa level Anda dan berlatih apa yang telah Anda pelajari. Untuk penilaian dan latihan yang andal dalam tata bahasa, penggunaan bahasa Inggris, kosakata, dan membaca, saya pribadi merekomendasikan <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>. Ini adalah sumber yang bagus untuk tes bahasa Inggris gratis untuk mengukur kemajuan Anda dan menjaga keterampilan Anda tetap tajam.</p>
+            <p>Akhirnya, dan ini mungkin hal terpenting yang saya pelajari dalam perjalanan saya: <strong>konsistensi dan ketekunan</strong> adalah segalanya. Penguasaan bahasa bukanlah sprint; ini adalah maraton. Akan ada pasang surut, saat-saat frustasi, dan waktu ketika Anda merasa tidak membuat kemajuan. Tapi Anda harus terus maju! <strong>Tetapkan jadwal belajar rutin</strong> dan patuhi sebisa mungkin, bahkan jika hanya 30 menit sehari. <strong>Motivasi akan berfluktuasi</strong>, jadi Anda membutuhkan disiplin. Rayakan kemenangan kecil Anda, tetapkan harapan realistis, dan cobalah untuk menemukan kegembiraan dalam prosesnya sendiri. Ingatlah untuk <strong>melacak kemajuan Anda</strong> (seperti yang saya lakukan dengan spreadsheet saya!) dan secara berkala periksa tujuan dan metode pembelajaran Anda untuk memastikan mereka masih bekerja untuk Anda. Rangkullah tantangan, belajar dari kesalahan Anda, dan yang terpenting, <strong>jangan menyerah!</strong> Kelancaran benar-benar dapat dicapai dengan usaha konsisten, sumber daya yang tepat, dan sikap positif. Dan saat Anda berkembang, ingatlah untuk memeriksa level Anda dan berlatih apa yang telah Anda pelajari. Untuk penilaian dan latihan yang andal dalam tata bahasa, penggunaan bahasa Inggris, kosakata, dan membaca, saya pribadi merekomendasikan <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>. Ini adalah sumber yang bagus untuk tes bahasa Inggris gratis untuk mengukur kemajuan Anda dan menjaga keterampilan Anda tetap tajam.</p>
             <div class="tip-box">
                 <div class="tip-title">Tip:</div>
                 <p><strong>Jadikan pembelajaran bahasa Inggris sebagai <em>kebiasaan</em>, bukan hanya hobi. Buat jadwal belajar yang realistis dan patuhi, bahkan ketika motivasi menurun. Rayakan kemenangan kecil dan ingat – ketekunan adalah kunci utama! Dan jangan lupa untuk secara teratur menilai keterampilan Anda menggunakan sumber daya seperti englishtests.online untuk melacak peningkatan Anda.</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/id/belajar-bahasa-inggris-efektif",
         "mainEntityOfPage": {
