--- a/ja/eigo-wo-kouka-teki-ni-manabu.html
+++ b/ja/eigo-wo-kouka-teki-ni-manabu.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">効果的に英語を学ぶ方法：<br>私の体験とアドバイス</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. 一貫性と持続性：長期戦が唯一のゲーム</h3>
-            <p>最後に、そしてこれはおそらく私の旅で学んだ最も重要なことかもしれません：<strong>一貫性と持続性</strong>がすべてです。言語習得は短距離走ではなく、マラソンです。上がり下がりがあり、フラストレーションの瞬間があり、進歩していないと感じる時もあるでしょう。しかし続けなければなりません！可能な限り<strong>定期的な学習スケジュールを確立</strong>し、それを守りましょう、たとえそれが1日30分だけでも。<strong>モチベーションは変動する</strong>ので、あなたには規律が必要です。小さな勝利を祝い、現実的な期待を設定し、プロセス自体に喜びを見つけるよう努めましょう。<strong>進捗状況を追跡する</strong>こと（私がスプレッドシートでやったように！）を忘れないでください、そして定期的に目標と学習方法をチェックして、それらがまだあなたにとって機能しているかを確認しましょう。挑戦を受け入れ、あなたの間違いから学び、そして最も重要なことは、<strong>諦めないこと！</strong>流暢さは一貫した努力、適切なリソース、そして前向きな姿勢で絶対に達成可能です。そして進歩するにつれて、あなたのレベルをチェックし、学んだことを練習することを忘れないでください。文法、英語の使用、語彙、読解の信頼性の高い評価と練習のために、私は個人的に<a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>をお勧めします。これはあなたの進歩を測定し、スキルを維持するための無料の英語テストの素晴らしいリソースです。</p>
+            <p>最後に、そしてこれはおそらく私の旅で学んだ最も重要なことかもしれません：<strong>一貫性と持続性</strong>がすべてです。言語習得は短距離走ではなく、マラソンです。上がり下がりがあり、フラストレーションの瞬間があり、進歩していないと感じる時もあるでしょう。しかし続けなければなりません！可能な限り<strong>定期的な学習スケジュールを確立</strong>し、それを守りましょう、たとえそれが1日30分だけでも。<strong>モチベーションは変動する</strong>ので、あなたには規律が必要です。小さな勝利を祝い、現実的な期待を設定し、プロセス自体に喜びを見つけるよう努めましょう。<strong>進捗状況を追跡する</strong>こと（私がスプレッドシートでやったように！）を忘れないでください、そして定期的に目標と学習方法をチェックして、それらがまだあなたにとって機能しているかを確認しましょう。挑戦を受け入れ、あなたの間違いから学び、そして最も重要なことは、<strong>諦めないこと！</strong>流暢さは一貫した努力、適切なリソース、そして前向きな姿勢で絶対に達成可能です。そして進歩するにつれて、あなたのレベルをチェックし、学んだことを練習することを忘れないでください。文法、英語の使用、語彙、読解の信頼性の高い評価と練習のために、私は個人的に<a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>をお勧めします。これはあなたの進歩を測定し、スキルを維持するための無料の英語テストの素晴らしいリソースです。</p>
             <div class="tip-box">
                 <div class="tip-title">ヒント：</div>
                 <p><strong>英語学習を趣味ではなく<em>習慣</em>にしましょう。現実的な学習スケジュールを作成し、モチベーションが低下しても、それを守りましょう。小さな勝利を祝い、忘れないでください - 持続性が究極の鍵です！そしてenglishtests.onlineのようなリソースを使って定期的にスキルを評価し、あなたの向上を追跡することを忘れないでください。</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu",
         "mainEntityOfPage": {
