--- a/ko/yeongeo-hwalryeokjeog-eolearn.html
+++ b/ko/yeongeo-hwalryeokjeog-eolearn.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">효과적인 영어 학습 방법:<br>나의 여정과 조언</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
     <section class="section" id="consistency">
             <h3>12. 일관성과 끈기: 장기적인 게임만이 유일한 게임입니다</h3>
-            <p>마지막으로, 이것은 제가 여정에서 배운 가장 중요한 것일 수도 있습니다: <strong>일관성과 끈기</strong>가 전부입니다. 언어 습득은 단거리 달리기가 아니라 마라톤입니다. 상승과 하락, 좌절의 순간, 그리고 진전이 없는 것처럼 느껴지는 시간이 있을 것입니다. 하지만 계속 나아가야 합니다! <strong>정기적인 학습 일정을 수립하고</strong> 하루에 30분이라도 가능한 한 이를 지켜야 합니다. <strong>동기는 변동할 것</strong>이므로 규율이 필요합니다. 작은 성공을 축하하고, 현실적인 기대치를 설정하며, 과정 자체에서 기쁨을 찾으려고 노력하세요. <strong>진행 상황을 추적하는 것</strong>(제가 스프레드시트로 했던 것처럼!)을 기억하고 목표와 학습 방법이 여전히 효과적인지 확인하기 위해 주기적으로 점검하세요. 도전을 받아들이고, 실수에서 배우며, 가장 중요한 것은 <strong>포기하지 마세요!</strong> 일관된 노력, 올바른 자원, 그리고 긍정적인 태도로 유창함은 절대적으로 달성 가능합니다. 그리고 진행하면서 자신의 수준을 확인하고 배운 내용을 연습하는 것을 잊지 마세요. 문법, 영어 사용, 어휘, 그리고 읽기에 대한 신뢰할 수 있는 평가와 연습을 위해, 저는 개인적으로 <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>을 추천합니다. 이는 진행 상황을 측정하고 기술을 날카롭게 유지하기 위한 무료 영어 테스트의 훌륭한 자원입니다.</p>
+            <p>마지막으로, 이것은 제가 여정에서 배운 가장 중요한 것일 수도 있습니다: <strong>일관성과 끈기</strong>가 전부입니다. 언어 습득은 단거리 달리기가 아니라 마라톤입니다. 상승과 하락, 좌절의 순간, 그리고 진전이 없는 것처럼 느껴지는 시간이 있을 것입니다. 하지만 계속 나아가야 합니다! <strong>정기적인 학습 일정을 수립하고</strong> 하루에 30분이라도 가능한 한 이를 지켜야 합니다. <strong>동기는 변동할 것</strong>이므로 규율이 필요합니다. 작은 성공을 축하하고, 현실적인 기대치를 설정하며, 과정 자체에서 기쁨을 찾으려고 노력하세요. <strong>진행 상황을 추적하는 것</strong>(제가 스프레드시트로 했던 것처럼!)을 기억하고 목표와 학습 방법이 여전히 효과적인지 확인하기 위해 주기적으로 점검하세요. 도전을 받아들이고, 실수에서 배우며, 가장 중요한 것은 <strong>포기하지 마세요!</strong> 일관된 노력, 올바른 자원, 그리고 긍정적인 태도로 유창함은 절대적으로 달성 가능합니다. 그리고 진행하면서 자신의 수준을 확인하고 배운 내용을 연습하는 것을 잊지 마세요. 문법, 영어 사용, 어휘, 그리고 읽기에 대한 신뢰할 수 있는 평가와 연습을 위해, 저는 개인적으로 <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>을 추천합니다. 이는 진행 상황을 측정하고 기술을 날카롭게 유지하기 위한 무료 영어 테스트의 훌륭한 자원입니다.</p>
             <div class="tip-box">
                 <div class="tip-title">팁:</div>
                 <p><strong>영어 학습을 취미가 아닌 <em>습관</em>으로 만드세요. 현실적인 학습 일정을 만들고 동기가 떨어질 때도 이를 지키세요. 작은 승리를 축하하고 기억하세요 - 끈기가 궁극적인 열쇠입니다! 그리고 englishtests.online과 같은 자원을 사용하여 정기적으로 기술을 평가하고 향상도를 추적하는 것을 잊지 마세요.</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn",
         "mainEntityOfPage": {
