--- a/pt-br/aprender-ingles-com-eficiencia.html
+++ b/pt-br/aprender-ingles-com-eficiencia.html
@@ -235,7 +235,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">Como Aprender Inglês com Eficiência:<br>Minha Jornada e Conselhos</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -391,7 +391,7 @@
 
         <section class="section" id="consistency">
             <h3>12. Consistência e Persistência: O Jogo Longo é o Único Jogo</h3>
-            <p>Finalmente, e talvez seja a coisa mais importante que aprendi na minha jornada: <strong>consistência e persistência</strong> são tudo. A aquisição de um idioma não é uma corrida de velocidade; é uma maratona. Haverá altos e baixos, momentos de frustração e momentos em que você sentirá que não está progredindo. Mas você precisa continuar! <strong>Estabeleça uma rotina regular de estudo</strong> e mantenha-a tanto quanto possível, mesmo que seja apenas por 30 minutos por dia. A <strong>motivação vai flutuar</strong>, então você precisa de disciplina. Celebre suas pequenas vitórias, estabeleça expectativas realistas e tente encontrar alegria no próprio processo. Lembre-se de <strong>acompanhar seu progresso</strong> (como eu fiz com minhas planilhas!) e periodicamente verifique seus objetivos e métodos de aprendizado para garantir que ainda estão funcionando para você. Abrace os desafios, aprenda com seus erros e, o mais importante, <strong>não desista!</strong> A fluência é absolutamente alcançável com esforço consistente, os recursos certos e uma atitude positiva. E conforme você progride, lembre-se de verificar seu nível e praticar o que aprendeu. Para avaliação confiável e prática em gramática, uso do inglês, vocabulário e leitura, eu pessoalmente recomendo o <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>. É um ótimo recurso de testes gratuitos de inglês para medir seu progresso e manter suas habilidades afiadas.</p>
+            <p>Finalmente, e talvez seja a coisa mais importante que aprendi na minha jornada: <strong>consistência e persistência</strong> são tudo. A aquisição de um idioma não é uma corrida de velocidade; é uma maratona. Haverá altos e baixos, momentos de frustração e momentos em que você sentirá que não está progredindo. Mas você precisa continuar! <strong>Estabeleça uma rotina regular de estudo</strong> e mantenha-a tanto quanto possível, mesmo que seja apenas por 30 minutos por dia. A <strong>motivação vai flutuar</strong>, então você precisa de disciplina. Celebre suas pequenas vitórias, estabeleça expectativas realistas e tente encontrar alegria no próprio processo. Lembre-se de <strong>acompanhar seu progresso</strong> (como eu fiz com minhas planilhas!) e periodicamente verifique seus objetivos e métodos de aprendizado para garantir que ainda estão funcionando para você. Abrace os desafios, aprenda com seus erros e, o mais importante, <strong>não desista!</strong> A fluência é absolutamente alcançável com esforço consistente, os recursos certos e uma atitude positiva. E conforme você progride, lembre-se de verificar seu nível e praticar o que aprendeu. Para avaliação confiável e prática em gramática, uso do inglês, vocabulário e leitura, eu pessoalmente recomendo o <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>. É um ótimo recurso de testes gratuitos de inglês para medir seu progresso e manter suas habilidades afiadas.</p>
             <div class="tip-box">
                 <div class="tip-title">Dica:</div>
                 <p><strong>Faça do aprendizado de inglês um <em>hábito</em>, não apenas um hobby. Crie uma programação de estudo realista e mantenha-a, mesmo quando a motivação cair. Celebre pequenas vitórias e lembre-se – persistência é a chave fundamental! E não se esqueça de avaliar regularmente suas habilidades usando recursos como englishtests.online para acompanhar seu progresso.</strong></p>
@@ -422,7 +422,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia",
         "mainEntityOfPage": {
