--- a/tl/mabisang-pag-aaral-ng-ingles.html
+++ b/tl/mabisang-pag-aaral-ng-ingles.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">Paano Matuto ng Ingles nang Mabisa:<br>Aking Paglalakbay at Payo</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. Pagiging Consistent at Matiyaga: Ang Long Game ang Tanging Laro</h3>
-            <p>Sa huli, at ito siguro ang pinakamahalagang bagay na natutunan ko sa aking paglalakbay: ang <strong>pagiging consistent at matiyaga</strong> ay ang lahat. Ang pagkatuto ng wika ay hindi isang sprint; ito ay isang maraton. Magkakaroon ng mga pag-angat at pagbaba, mga sandali ng pagkabigo, at mga pagkakataon kung kailan pakiramdam mo ay hindi ka umuunlad. Ngunit kailangan mong magpatuloy! <strong>Magtatag ng regular na iskedyul ng pag-aaral</strong> at sumunod dito hangga't maaari, kahit 30 minuto lang bawat araw. Ang <strong>motivasyon ay mag-iiba-iba</strong>, kaya kailangan mo ng disiplina. Ipagdiwang ang iyong maliliit na tagumpay, magtakda ng makatotohanang mga inaasahan, at subukang makahanap ng kasiyahan sa proseso mismo. Tandaang <strong>subaybayan ang iyong pag-unlad</strong> (tulad ng ginawa ko sa aking mga spreadsheet!) at palagiang suriin ang iyong mga layunin at pamamaraan ng pag-aaral para matiyak na gumagana pa rin ang mga ito para sa iyo. Tanggapin ang mga hamon, matuto mula sa iyong mga pagkakamali, at higit sa lahat, <strong>huwag sumuko!</strong> Ang kalinawan ay talagang makakamit sa pamamagitan ng consistent na pagsisikap, tamang resources, at positibong pag-uugali. At habang umuunlad ka, tandaang suriin ang iyong antas at praktisin ang iyong natutunan. Para sa maaasahang assessment at pagsasanay sa grammar, paggamit ng English, vocabulary, at pagbabasa, personal kong inirerekomenda ang <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>. Ito ay isang magandang resource ng mga libreng English tests para sukatin ang iyong pag-unlad at panatilihing matalim ang iyong mga kasanayan.</p>
+            <p>Sa huli, at ito siguro ang pinakamahalagang bagay na natutunan ko sa aking paglalakbay: ang <strong>pagiging consistent at matiyaga</strong> ay ang lahat. Ang pagkatuto ng wika ay hindi isang sprint; ito ay isang maraton. Magkakaroon ng mga pag-angat at pagbaba, mga sandali ng pagkabigo, at mga pagkakataon kung kailan pakiramdam mo ay hindi ka umuunlad. Ngunit kailangan mong magpatuloy! <strong>Magtatag ng regular na iskedyul ng pag-aaral</strong> at sumunod dito hangga't maaari, kahit 30 minuto lang bawat araw. Ang <strong>motivasyon ay mag-iiba-iba</strong>, kaya kailangan mo ng disiplina. Ipagdiwang ang iyong maliliit na tagumpay, magtakda ng makatotohanang mga inaasahan, at subukang makahanap ng kasiyahan sa proseso mismo. Tandaang <strong>subaybayan ang iyong pag-unlad</strong> (tulad ng ginawa ko sa aking mga spreadsheet!) at palagiang suriin ang iyong mga layunin at pamamaraan ng pag-aaral para matiyak na gumagana pa rin ang mga ito para sa iyo. Tanggapin ang mga hamon, matuto mula sa iyong mga pagkakamali, at higit sa lahat, <strong>huwag sumuko!</strong> Ang kalinawan ay talagang makakamit sa pamamagitan ng consistent na pagsisikap, tamang resources, at positibong pag-uugali. At habang umuunlad ka, tandaang suriin ang iyong antas at praktisin ang iyong natutunan. Para sa maaasahang assessment at pagsasanay sa grammar, paggamit ng English, vocabulary, at pagbabasa, personal kong inirerekomenda ang <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>. Ito ay isang magandang resource ng mga libreng English tests para sukatin ang iyong pag-unlad at panatilihing matalim ang iyong mga kasanayan.</p>
             <div class="tip-box">
                 <div class="tip-title">Tip:</div>
                 <p><strong>Gawing <em>routine</em> ang pag-aaral ng English, hindi lang libangan. Lumikha ng makatotohanang iskedyul ng pag-aaral at sumunod dito, kahit bumaba ang motivasyon. Ipagdiwang ang maliliit na tagumpay at tandaan – ang pagiging matiyaga ang pinakamahalagang susi! At huwag kalimutang regular na suriin ang iyong mga kasanayan gamit ang mga resources tulad ng englishtests.online para subaybayan ang iyong pag-unlad.</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles",
         "mainEntityOfPage": {
