--- a/tr/ingilizce-etkili-ogrenme.html
+++ b/tr/ingilizce-etkili-ogrenme.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">İngilizceyi Etkili Öğrenme:<br>Yolculuğum ve Tavsiyelerim</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. Tutarlılık ve Azim: Uzun Oyun Tek Oyundur</h3>
-            <p>Son olarak, ve belki de yolculuğumda öğrendiğim en önemli şey: <strong>tutarlılık ve azim</strong> her şeydir. Dil edinimi bir sprint değil, bir maratondur. İnişler ve çıkışlar, hayal kırıklığı anları ve ilerleme kaydetmediğinizi hissettiğiniz zamanlar olacaktır. Ama devam etmelisiniz! Mümkün olduğunca düzenli bir çalışma programı <strong>oluşturun</strong> ve günde sadece 30 dakika bile olsa buna bağlı kalın. <strong>Motivasyon dalgalanacaktır</strong>, bu yüzden disipline ihtiyacınız var. Küçük başarılarınızı kutlayın, gerçekçi beklentiler belirleyin ve sürecin kendisinde sevinç bulmaya çalışın. <strong>İlerlemenizi takip etmeyi</strong> (tıpkı elektronik tablolarımla yaptığım gibi!) unutmayın ve hala sizin için çalışıp çalışmadıklarından emin olmak için hedeflerinizi ve öğrenme yöntemlerinizi periyodik olarak kontrol edin. Zorlukları kucaklayın, hatalarınızdan ders alın ve en önemlisi, <strong>vazgeçmeyin!</strong> Akıcılık, tutarlı çaba, doğru kaynaklar ve olumlu bir tutumla kesinlikle ulaşılabilir. Ve ilerledikçe, seviyenizi kontrol etmeyi ve öğrendiklerinizi uygulamayı unutmayın. Dilbilgisi, İngilizce kullanımı, kelime dağarcığı ve okuma konusunda güvenilir değerlendirme ve pratik için, kişisel olarak <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>'ı öneriyorum. İlerlemenizi ölçmek ve becerilerinizi keskin tutmak için ücretsiz İngilizce testlerin harika bir kaynağıdır.</p>
+            <p>Son olarak, ve belki de yolculuğumda öğrendiğim en önemli şey: <strong>tutarlılık ve azim</strong> her şeydir. Dil edinimi bir sprint değil, bir maratondur. İnişler ve çıkışlar, hayal kırıklığı anları ve ilerleme kaydetmediğinizi hissettiğiniz zamanlar olacaktır. Ama devam etmelisiniz! Mümkün olduğunca düzenli bir çalışma programı <strong>oluşturun</strong> ve günde sadece 30 dakika bile olsa buna bağlı kalın. <strong>Motivasyon dalgalanacaktır</strong>, bu yüzden disipline ihtiyacınız var. Küçük başarılarınızı kutlayın, gerçekçi beklentiler belirleyin ve sürecin kendisinde sevinç bulmaya çalışın. <strong>İlerlemenizi takip etmeyi</strong> (tıpkı elektronik tablolarımla yaptığım gibi!) unutmayın ve hala sizin için çalışıp çalışmadıklarından emin olmak için hedeflerinizi ve öğrenme yöntemlerinizi periyodik olarak kontrol edin. Zorlukları kucaklayın, hatalarınızdan ders alın ve en önemlisi, <strong>vazgeçmeyin!</strong> Akıcılık, tutarlı çaba, doğru kaynaklar ve olumlu bir tutumla kesinlikle ulaşılabilir. Ve ilerledikçe, seviyenizi kontrol etmeyi ve öğrendiklerinizi uygulamayı unutmayın. Dilbilgisi, İngilizce kullanımı, kelime dağarcığı ve okuma konusunda güvenilir değerlendirme ve pratik için, kişisel olarak <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>'ı öneriyorum. İlerlemenizi ölçmek ve becerilerinizi keskin tutmak için ücretsiz İngilizce testlerin harika bir kaynağıdır.</p>
             <div class="tip-box">
                 <div class="tip-title">İpucu:</div>
                 <p><strong>İngilizce öğrenmeyi sadece bir hobi değil, bir <em>alışkanlık</em> haline getirin. Gerçekçi bir çalışma programı oluşturun ve motivasyon düştüğünde bile buna bağlı kalın. Küçük zaferleri kutlayın ve unutmayın – azim nihai anahtardır! Ve englishtests.online gibi kaynakları kullanarak becerilerinizi düzenli olarak değerlendirmeyi ve gelişiminizi takip etmeyi unutmayın.</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/tr/ingilizce-etkili-ogrenme",
         "mainEntityOfPage": {
